[gd_scene load_steps=27 format=3 uid="uid://cjam2yvuio7vy"]

[ext_resource type="Script" path="res://scenes/enemies/enemy.gd" id="1_1ewl5"]
[ext_resource type="Texture2D" uid="uid://kx8ybl7ma2wj" path="res://assets/sprites/slime_2.png" id="1_od53l"]
[ext_resource type="Script" path="res://components/damage_c.gd" id="2_fyk2t"]
[ext_resource type="Script" path="res://components/health_c.gd" id="3_3xp42"]
[ext_resource type="PackedScene" uid="uid://df2k4aqhlgjbg" path="res://components/health_uic.tscn" id="4_mhoej"]
[ext_resource type="Script" path="res://components/game_actions_c.gd" id="5_bn5rv"]
[ext_resource type="Script" path="res://resources/game_action.gd" id="6_02fjo"]
[ext_resource type="Script" path="res://ressource_beans/attack_game_action.gd" id="7_w4dnd"]
[ext_resource type="Script" path="res://ressource_beans/fail_game_action.gd" id="8_2bute"]
[ext_resource type="Script" path="res://ressource_beans/shield_game_action.gd" id="9_0y52o"]
[ext_resource type="Script" path="res://components/intent_c.gd" id="9_dy2i7"]
[ext_resource type="PackedScene" uid="uid://wxit23g2snfw" path="res://components/intent_uic.tscn" id="10_x2c1b"]
[ext_resource type="Script" path="res://components/reward_c.gd" id="11_qfire"]
[ext_resource type="Script" path="res://components/shield_c.gd" id="13_5ur8h"]
[ext_resource type="PackedScene" uid="uid://d3nk0bjfmnjo8" path="res://components/shield_uic.tscn" id="14_3qb6y"]

[sub_resource type="Shader" id="Shader_iavlv"]
code = "shader_type canvas_item;

uniform vec4 color: source_color;
uniform float amount: hint_range(0.0, 1.0, 0.01) = 0.5;
uniform float transparency_threshold: hint_range(0.0, 1.0, 0.01) = 0.01;

void fragment() {
	vec4 pixel = texture(TEXTURE, UV);
	if (pixel.a > transparency_threshold) {
		COLOR = mix(pixel, color, amount);
	}
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_isq8n"]
resource_local_to_scene = true
shader = SubResource("Shader_iavlv")
shader_parameter/color = Color(1, 0, 0.0166664, 1)
shader_parameter/amount = 0.0
shader_parameter/transparency_threshold = 0.01

[sub_resource type="Resource" id="Resource_c512c"]
script = ExtResource("7_w4dnd")
level = 2

[sub_resource type="Resource" id="Resource_h3ehb"]
script = ExtResource("7_w4dnd")
level = 3

[sub_resource type="Resource" id="Resource_cvnxw"]
script = ExtResource("8_2bute")
level = 1

[sub_resource type="Resource" id="Resource_v38mu"]
script = ExtResource("8_2bute")
level = 1

[sub_resource type="Resource" id="Resource_2aj7f"]
script = ExtResource("9_0y52o")
level = 1

[sub_resource type="Animation" id="Animation_3vnjn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_rjig5"]
resource_name = "damage"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_7r3sv"]
resource_name = "died"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fdkp0"]
_data = {
"RESET": SubResource("Animation_3vnjn"),
"damage": SubResource("Animation_rjig5"),
"died": SubResource("Animation_7r3sv")
}

[node name="MediumSlime" type="Node2D"]
scale = Vector2(4, 4)
script = ExtResource("1_1ewl5")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_isq8n")
position = Vector2(0, -8)
texture = ExtResource("1_od53l")

[node name="DamageC" type="Node" parent="."]
script = ExtResource("2_fyk2t")

[node name="HealthC" type="Node" parent="."]
script = ExtResource("3_3xp42")
max_health = 10

[node name="HeathUIC" parent="." instance=ExtResource("4_mhoej")]
offset_top = -22.935
offset_bottom = -18.935

[node name="GameActionsC" type="Node" parent="."]
script = ExtResource("5_bn5rv")
actions = Array[ExtResource("6_02fjo")]([SubResource("Resource_c512c"), SubResource("Resource_h3ehb"), SubResource("Resource_cvnxw"), SubResource("Resource_v38mu"), SubResource("Resource_2aj7f")])

[node name="IntentC" type="Node" parent="."]
script = ExtResource("9_dy2i7")

[node name="IntentUIC" parent="." instance=ExtResource("10_x2c1b")]
offset_top = -11.08
offset_bottom = -7.08

[node name="RewardC" type="Node" parent="."]
script = ExtResource("11_qfire")
gold = 20

[node name="ShieldC" type="Node" parent="."]
script = ExtResource("13_5ur8h")

[node name="ShieldUIC" parent="." instance=ExtResource("14_3qb6y")]
offset_top = -15.935
offset_bottom = -11.935

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fdkp0")
}

[connection signal="on_damage" from="DamageC" to="." method="_on_damage_c_on_damage"]
